[package]
name = "berlin-clock-hardware"
version = "0.1.0"
authors = ["Matteo Pierro <pierromatteo@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "berlin-clock-hardware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
berlin_clock = { path = "../core" }
chrono = "0.4.39"
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.95"

[build-dependencies]
embuild = "0.33"
